# tracing-otel

./: .gitignore  Cargo.toml
tracing-otel-http/: Cargo.toml
tracing-otel-http/src/grpc/: mod.rs
tracing-otel-http/src/http/: http.rs  mod.rs  server_make_span.rs  server_on_response.rs
