[package]
name = "tracing-otel-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1"
opentelemetry = "0.22.0"
tower-http = { version = "0.5", features = ["tracing", "trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.23.0"
