[package]
name = "tracing-otel-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
grpc = [
    "dep:hyper",
    "dep:tonic",
    "dep:tower",
]

[dependencies]
http = "1"
opentelemetry = "0.22.0"
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["tracing", "trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.23.0"
hyper = {  version = "0.14", optional = true }
tonic = { version =  "0.11.0", optional = true }
